fix button alignment and CSS updates

--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -2,8 +2,11 @@ h1 {
     font-size: 25px;
     margin-bottom: 20px;
     text-align: center;
-    color: #ff385c;
+    color: #000000;
     font-weight: bold;
+    text-decoration: underline;
+    text-decoration-color: #ff385c;
+
   }
 
   form {
