--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
   }
   
   #modal-background {
@@ -19,43 +20,12 @@
   }
   
   #modal-content {
-    position: absolute;
+    position: relative;
     background-color: white;
-    min-width: 350px;
-  }
-
-  #modal-content form {
-    width: 100%;
-  }
-
-  #modal-content input {
-    display: block;
-    width: 300px; 
-    height: 24px;
-    padding: 5px;
-    margin-bottom: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  #modal-content input[type="text"],
-#modal-content input[type="password"] {
-  width: 100%;  
+    border-radius: 8px;
+    padding: 20px;
+    max-width: 90%;
+    max-height: 90%;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
 }
-#modal-content label {
-    display: block;
-    width: 100%;
-    margin-bottom: 5px;
-  }
-  #modal-content button {
-    background-color: #ff385c;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 15px;
-    font-size: 16px;
-    cursor: pointer;
-    width: 220px; 
-    display: block;
-    margin: 15px auto 0;
-  }
+
