--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -2,8 +2,10 @@ h1 {
     font-size: 24px;
     margin-bottom: 20px;
     text-align: center;
-    color: #000000;
+    color: black;
     font-weight: bold;
+    text-decoration: underline;
+    text-decoration-color: #ff385c;
 }
   
   form {
@@ -21,7 +23,7 @@ h1 {
     margin-bottom: 15px;
     border: 2px solid #ccc;
     border-radius: 3px;
-    font-size: 12px;
+    font-size: 14px;
     background-color: #f9f9f9;
   }
 input:focus {
