--- a/frontend/src/components/Reviews/review.css
+++ b/frontend/src/components/Reviews/review.css
@@ -1,10 +1,9 @@
 .review-form{
     max-width: 350px;
-    padding: 14px;
     text-align: center;
 }
 .review-form h1 {
-    color: #ff385c;
+    color: #000000;
     margin-bottom: 3px;
 }
 
@@ -19,9 +18,13 @@
 .review-form button {
     background-color: #ff385c;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 50px;
     cursor: pointer;
     font-weight: bold;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    display: block;
 }
 
 .stars-container {
@@ -48,10 +51,16 @@
 .reviews-section {
     border-top: 2px solid #000000;
 }
+.reviews-section p {
+    margin-bottom: 15px;
+    display: block;
+    color: black !important;
+}
+
 
 .reviews-section h2 {
     margin-bottom: 10px;
-    font-size: 22px;
+    font-size: 16px;
     font-weight: bold;
 }
 .review-item {
@@ -61,17 +70,19 @@
 .review-item h3 {
     font-weight: bold;
     margin-bottom: 5px;
+    color: black;
 }
 
 .review-item p {
     margin-bottom: 5px;
+    color: black !important;
 }
 
 
 .review-author {
     font-weight: bold;
-    margin-bottom: 2px;
-    color: #FF385C;
+    margin-bottom: 20px;
+    color: black;
 }
 
 .review-date {
@@ -84,13 +95,14 @@
     background-color: #FF385C;
     color: rgb(255, 255, 255);
     font-weight: bold;
-    padding: 12px 25px;
+    padding: 10px 25px;
     border-radius: 2px;
     border: none;
     cursor: pointer;
     margin-top: 16px; 
     margin-bottom: 24px;
      display: block;
+     
 }
 .post-review-button:hover {
     background-color: #e31c5f;
@@ -106,34 +118,38 @@
 }
 
 .delete-review-modal h2 {
-   color: red;
-   margin-bottom: 10px;
+   color: rgb(0, 0, 0);
+   margin-bottom: 15px;
+   text-decoration: underline;
+   text-decoration-color: #ff385c;
 }
 
 .delete-review-modal p {
-   margin-bottom: 1px;
+   margin-bottom: 30px;
 }
 .button-container {
    display: flex;
-   gap: 13px;
+   gap: 10px;
    justify-content: center;
+  align-items: baseline;
+}
+.delete-button, .cancel-button {
+   border: none;
+   padding: 12px 20px;
+   cursor: pointer;
+   font-size: 14px;
+   font-weight: bold;
+   border-radius: 4px;
 }
 .delete-button {
    background-color: red;
    color: white;
-   border: none;
-   padding: 5px;
-   cursor: pointer;
 }
 
 .cancel-button {
-   background-color: gray;
+   background-color: red;
    color: white;
-   border: none;
-   padding: 10px;
-   cursor: pointer;
 }
-
 .error {
    color: red;
    font-size: 12px;
