--- a/frontend/src/components/Reviews/review.css
+++ b/frontend/src/components/Reviews/review.css
@@ -11,7 +11,7 @@
     width: 100%;
     height: 80px;
     padding: 12px;
-    border: 2px solid black;
+    border: 3px solid black;
   
 }
 
@@ -54,7 +54,7 @@
 .reviews-section p {
     margin-bottom: 15px;
     display: block;
-    color: black !important;
+    color: #ff385c !important;
 }
 
 
@@ -75,7 +75,7 @@
 
 .review-item p {
     margin-bottom: 5px;
-    color: black !important;
+    color: black;
 }
 
 
@@ -93,17 +93,20 @@
 
 .post-review-button {
     background-color: #FF385C;
-    color: rgb(255, 255, 255);
+    color: white;
     font-weight: bold;
     padding: 10px 25px;
-    border-radius: 2px;
     border: none;
     cursor: pointer;
-    margin-top: 16px; 
-    margin-bottom: 24px;
-     display: block;
-     
+    font-size: 16px;
+    width: 190px;
+    display: block;
+    margin-left: 0 auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    margin-top: 15px;
 }
+
 .post-review-button:hover {
     background-color: #e31c5f;
 }
