--- a/frontend/src/components/Reviews/review.css
+++ b/frontend/src/components/Reviews/review.css
@@ -92,19 +92,17 @@
 }
 
 .post-review-button {
-    background-color: #FF385C;
-    color: white;
+    background-color: #FF385C !important;
+    color: white !important;
     font-weight: bold;
     padding: 10px 25px;
     border: none;
     cursor: pointer;
     font-size: 16px;
-    width: 190px;
-    display: block;
-    margin-left: 0 auto;
-    margin-right: auto;
-    margin-bottom: 20px;
-    margin-top: 15px;
+    width: 200px;
+    display: block !important;
+    margin: 15px 0 20px 0 !important; 
+    border-radius: 5px;
 }
 
 .post-review-button:hover {
