--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -58,17 +58,9 @@ h1 {
         background-color: #f9f9f9;
       }
 
-      button {
-        background-color: #ff385c;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        padding: 8px 15px;
-        font-size: 16px;
-        cursor: pointer;
-       
-      }
-     button {
+
+   .signup-form button,
+.signup-button {
     background-color: #ff385c;
     color: white;
     border: none;
@@ -80,9 +72,11 @@ h1 {
     width: 100%;
     margin-top: 10px;
 }
-  button:hover {
+
+.signup-form button:hover,
+.signup-button:hover {
     background-color: #ff5a76;
-  }
+}
 
   p {
     color: red;
