--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,7 @@
   body {
     color: #222;
     background-color: #eddfdf;
-    font-family: Arial, sans-serif;
+    font-family:Georgia, 'Times New Roman', Times, serif;
     line-height: 1.5;
   }
 
