--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -47,6 +47,14 @@ input:focus {
   button:hover {
     background-color: #ff5a76;
   }
+
+  button:disabled {
+    background-color: #ccc;
+    color: #888;
+    cursor: not-allowed
+  }
+
+  /*hover??*/
   
  .error-message {
     color: red;
