--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -42,6 +42,13 @@
     padding: 10px;
 }
 
+.spot-top-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
 .spot-location {
     font-size: 18px;
     margin-bottom: 3px;
