--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -19,7 +19,8 @@
     border-radius: 3px;
     overflow: hidden;
     border: 5px solid black;
-    background-color:white
+    background-color:white;
+    height: 330px;
 }
 
 .spot-card:hover {
@@ -40,6 +41,10 @@
 
 .spot-info {
     padding: 10px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .spot-top-row {
@@ -50,7 +55,7 @@
 }
 
 .spot-location {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: bold;
     color: #000000;
     text-decoration: underline;
@@ -67,7 +72,7 @@
 
 .spot-price {
     font-weight: bold;
-    font-size: 16px;
+    font-size: 15px;
     color: black
 }
 
