manage spots page had a few issues, recently implimented the ratings and reviews onto it cards, however they had a different format than landing page, so basically copied what i had on spotCard and put it on manageSpots, should be fixed now

--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -555,7 +555,7 @@ textarea {
 }
 
 .manage-spots-container .spot-rating {
-    font-weight: bold;
+    font-size: 12px;
 }
 
 .manage-spots-container .spot-price {
