--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -64,8 +64,9 @@
 
 .spot-rating {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    font-size: 14px;
+    font-size: 11px;
     font-weight: lighter;
 
 }
@@ -240,10 +241,17 @@
 .reserve-button:hover,
 .submit-button:hover,
 .create-new-spot-button:hover,
-.update-button:hover,
- .delete-button:hover,
- .cancel-button:hover{
+ .delete-button:hover{
+ 
     background-color: #e31c5f;
+}
+
+.cancel-button:hover{
+    background-color: #ccc;
+}
+
+.update-button:hover{
+    background-color: rgb(51, 220, 51);
 }
 
 .reviews-section h2 {
@@ -473,6 +481,7 @@ textarea {
 }
 
 
+
 .spot-actions {
     padding: 10px;
     text-align: center;
@@ -515,6 +524,10 @@ textarea {
     display: block;
     border: none;
     cursor: pointer;
+}
+
+.manage-spots-container .create-new-spot-button:hover{
+    background-color: #e31c5f;
 }
 
 .manage-spots-container .spots-container {
@@ -588,6 +601,8 @@ textarea {
     margin-bottom: 15px;
     font-size: 24px;
     color: black;
+    text-decoration: underline;
+    text-decoration-color: #FF385C;
 }
 
 .delete-modal p {
@@ -598,6 +613,11 @@ textarea {
     display: flex;
     justify-content: center;
     gap: 20px;
+}
+
+.delete-modal .button-container button {
+    width: 140px;
+    text-align: center;
 }
 
 .cancel-button {
